// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  collapsable={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#E0956D",
      "borderBottomWidth": 1,
      "borderColor": "red",
      "borderLeftWidth": 0,
      "borderRightWidth": 0,
      "borderTopWidth": 0,
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "marginLeft": 2,
      "marginTop": "3%",
      "opacity": 1,
    }
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  />
  <TextInput
    allowFontScaling={true}
    editable={true}
    onChangeText={[Function]}
    placeholder={undefined}
    placeholderTextColor="white"
    secureTextEntry={undefined}
    style={
      Array [
        Object {
          "color": "#000",
          "flex": 1,
          "fontSize": 17,
          "height": 50,
          "lineHeight": 24,
          "paddingLeft": 5,
          "paddingRight": 5,
          "top": 1.5,
        },
        Object {
          "color": "#424242",
          "flex": 1,
          "fontFamily": "SinkinSans-200XLight",
          "fontSize": 12,
          "paddingBottom": 10,
          "paddingLeft": 0,
          "paddingRight": 10,
          "paddingTop": 10,
        },
      ]
    }
    underlineColorAndroid="rgba(0,0,0,0)"
    virtual={undefined}
  />
</View>
`;

exports[`renders correctly 2`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "padding": 7,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={undefined}
    style={
      Object {
        "backgroundColor": "white",
        "flex": 1,
        "padding": 7,
      }
    }
  >
    <View>
      <View
        style={undefined}
      >
        <View
          style={
            Object {
              "backgroundColor": "#fff",
              "borderBottomWidth": 0.5,
              "borderColor": "#ccc",
              "borderLeftWidth": 0.5,
              "borderRadius": 2,
              "borderRightWidth": 0.5,
              "borderTopWidth": 0.5,
              "elevation": 3,
              "flex": 1,
              "flexWrap": "wrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 1.5,
            }
          }
          virtual={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderRadius": 2,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": 10,
                },
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingTop": 0,
                },
              ]
            }
            virtual={undefined}
          >
            <View
              style={
                Object {
                  "borderRightColor": "#B2BEB5",
                  "borderRightWidth": 0.5,
                  "padding": 6,
                  "width": "50%",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                    },
                    Object {
                      "fontFamily": "SinkinSans-200XLight",
                    },
                  ]
                }
              >
                ITEM
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderRightColor": "#B2BEB5",
                    "borderRightWidth": 0.5,
                    "padding": 6,
                    "width": "50%",
                  },
                  Object {
                    "width": "15%",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                    },
                    Object {
                      "fontFamily": "SinkinSans-200XLight",
                    },
                  ]
                }
              >
                No
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderRightColor": "#B2BEB5",
                    "borderRightWidth": 0.5,
                    "padding": 6,
                    "width": "50%",
                  },
                  Object {
                    "width": "15%",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                    },
                    Object {
                      "fontFamily": "SinkinSans-200XLight",
                    },
                  ]
                }
              >
                Price
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {
                    "borderRightColor": "#B2BEB5",
                    "borderRightWidth": 0.5,
                    "padding": 6,
                    "width": "50%",
                  },
                  Object {
                    "borderRightWidth": 0,
                    "height": "100%",
                    "padding": 6,
                    "width": "20%",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                    },
                    Object {
                      "fontFamily": "SinkinSans-200XLight",
                    },
                  ]
                }
              >
                SubTotal
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#fff",
              "borderBottomWidth": 0.5,
              "borderColor": "#ccc",
              "borderLeftWidth": 0.5,
              "borderRadius": 2,
              "borderRightWidth": 0.5,
              "borderTopWidth": 0.5,
              "elevation": 3,
              "flex": 1,
              "flexWrap": "wrap",
              "marginBottom": 5,
              "marginLeft": 2,
              "marginRight": 2,
              "marginTop": 5,
              "shadowColor": "#000",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 1.5,
            }
          }
          virtual={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "borderRadius": 2,
                  "flexDirection": "row",
                  "paddingBottom": 10,
                  "paddingLeft": 15,
                  "paddingRight": 15,
                  "paddingTop": 10,
                },
                Object {
                  "paddingBottom": 0,
                  "paddingLeft": 0,
                  "paddingTop": 0,
                },
              ]
            }
            virtual={undefined}
          >
            <View
              style={
                Object {
                  "borderRightColor": "#f5f5f5",
                  "borderRightWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "padding": 6,
                  "width": "50%",
                }
              }
            >
              <Image
                source={
                  Object {
                    "uri": "dfsdfs",
                  }
                }
                style={
                  Object {
                    "height": 40,
                    "marginTop": 5,
                    "width": 40,
                  }
                }
              />
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                      "marginLeft": 10,
                      "marginTop": 15,
                    },
                    Object {
                      "fontFamily": "SinkinSans-200XLight",
                    },
                  ]
                }
              >
                fdf
              </Text>
            </View>
            <View
              style={
                Object {
                  "borderRightColor": "#f5f5f5",
                  "borderRightWidth": 0.5,
                  "height": "100%",
                  "padding": 6,
                  "width": "15%",
                }
              }
            >
              <View
                animated={true}
                defaultIndex={-1}
                defaultValue="  1  "
                disabled={false}
                dropdownTextStyle={
                  Object {
                    "fontFamily": "SinkinSans-100Thin",
                    "fontSize": 14,
                    "padding": 3,
                  }
                }
                keyboardShouldPersistTaps="never"
                options={
                  Array [
                    "  1  ",
                    "  2  ",
                    "  3  ",
                    "  4  ",
                    "  5  ",
                  ]
                }
                showsVerticalScrollIndicator={true}
                style={
                  Object {
                    "borderColor": "#B2BEB5",
                    "borderWidth": 0.5,
                    "marginTop": 10,
                    "padding": 3,
                  }
                }
                textStyle={
                  Object {
                    "fontFamily": "SinkinSans-100Thin",
                    "fontSize": 14,
                  }
                }
              >
                <View
                  accessibilityComponentType={undefined}
                  accessibilityLabel={undefined}
                  accessibilityTraits={undefined}
                  accessible={true}
                  collapsable={undefined}
                  hitSlop={undefined}
                  isTVSelectable={true}
                  nativeID={undefined}
                  onLayout={undefined}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "opacity": 1,
                    }
                  }
                  testID={undefined}
                  tvParallaxProperties={undefined}
                >
                  <View
                    style={
                      Object {
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      numberOfLines={1}
                      style={
                        Array [
                          Object {
                            "fontSize": 12,
                          },
                          Object {
                            "fontFamily": "SinkinSans-100Thin",
                            "fontSize": 14,
                          },
                        ]
                      }
                    >
                        1  
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "borderRightColor": "#f5f5f5",
                  "borderRightWidth": 0.5,
                  "height": "100%",
                  "padding": 6,
                  "width": "15%",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                      "marginTop": 15,
                    },
                    Object {
                      "fontFamily": "SinkinSans-200XLight",
                    },
                  ]
                }
              >
                Price
              </Text>
            </View>
            <View
              style={
                Object {
                  "borderRightWidth": 0,
                  "height": "100%",
                  "padding": 6,
                  "width": "20%",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "fontSize": 12,
                      "marginTop": 15,
                    },
                    Object {
                      "fontFamily": "SinkinSans-200XLight",
                    },
                  ]
                }
              >
                SubTotal
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "backgroundColor": "#F7C04C",
              "borderBottomWidth": null,
              "borderColor": "#007aff",
              "borderLeftWidth": null,
              "borderRadius": 5,
              "borderRightWidth": null,
              "borderTopWidth": null,
              "elevation": 2,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "center",
              "marginTop": "4%",
              "opacity": 1,
              "paddingBottom": 6,
              "paddingTop": 6,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 30,
                  },
                  Object {
                    "color": "#fff",
                    "fontSize": 24,
                    "marginLeft": 16,
                    "marginRight": 0,
                    "paddingTop": 2,
                  },
                ],
                Object {
                  "fontFamily": "ionicons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
            virtual={undefined}
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontFamily": "SinkinSans-100Thin",
                  "fontSize": 14,
                  "fontWeight": "bold",
                },
                Object {
                  "fontFamily": "SinkinSans-200XLight",
                },
              ]
            }
          >
                CHECKOUT   
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders correctly 3`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Array [
          Object {
            "color": "#000",
            "fontSize": 30,
          },
          Object {
            "color": "#000",
            "fontSize": 30,
          },
          Object {
            "color": "white",
            "fontSize": 30,
          },
        ],
        Object {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
    virtual={undefined}
  >
    
  </Text>
</View>
`;
